Language button and dark mode button layout fix

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h1 {
     padding: 0.2rem;
     width: 6rem;
     box-shadow: 0 0 1rem #00000007;
-    margin-top: -43vh;
+    margin-top: -20rem;
     margin-right: 1vw;
 }
 
@@ -155,7 +155,7 @@ h1 {
     height: 3rem;
     padding: 0.2rem;
     width: 3rem;
-    margin-top: -36vh;
+    margin-top: -16.8rem;
     margin-right: 1vw;
     cursor: pointer;
 }
